# obscura

./: Cargo.toml
crates/obscura-browser/src/: page.rs
crates/obscura-cdp/src/: server.rs
crates/obscura-cdp/src/domains/: browser.rs  page.rs
crates/obscura-cli/src/: main.rs
